--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -206,7 +206,7 @@ yrVpop<-round(bs.sig.yr/bs.sig.pop)
 % Most comments say: emw8Oct2025: 
 
 % emw6Nov2025 -- I think we should be careful on going too hard on carbon, especially in the abstract.
-\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain why. Using rarely available plant-scale phenological measurements from a common garden  of 18 woody species, we found earlier leafout led to earlier budset and thus lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of budset and may help explain why apparently longer seasons do not increase growth.}
+\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain how. Using rarely available plant-level phenology from a common garden of 18 woody species, we found earlier leafout led to earlier growth cessation (budset) and lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of controls on budset and suggest why apparently longer seasons do not increase growth.}
 
 
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
@@ -240,7 +240,7 @@ The thermal growing season---a period of favorable meteorological conditions for
 
 
 % emw6Nov2025 -- we do not report correlations, we use a regression so we need to avoid talking about correlations, unless we want to annoy reviewers.
-Here, we use rarely available plant-scale data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
+Here, we use rarely available plant-level data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
 
 \section{Results \& Discussion} 
 \iffalse
@@ -253,7 +253,7 @@ Here, we use rarely available plant-scale data from three years of a multi-speci
 \fi
 
 % emw6Nov2025 -- we don't have inference at 2 decimal places, can you change throughout to 1 decimal place?
-Across three years and 18 co-occuring species from from four populations across a 4.5$\degree$, our common garden captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
+Across three years and 18 co-occuring species collected from four populations across a 4.5$\degree$ latitudinal gradient, our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
 
 % emw6Nov2025 -- Can you add a fig ref for 'This result was driven by an apparent relationship between leafout and budset at the individual level (FIG)'?
 Longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed; instead
@@ -264,14 +264,14 @@ early calendar growing seasons led to lower (cooler) thermal growing seasons (Fi
 Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, likely because their earlier leafout still occurred in thermally favorable times of the season. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:\Sexpr{sig.sp} $UI_{90}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], days for budset: \Sexpr{bs.sig.sp} $UI_{90}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], days for season length: \Sexpr{gs.sig.sp}, $UI_{90}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}l Figure \ref{fig:vapar}a-b).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
-These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were strongly species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
+These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
 % emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
 % emw6Nov2025 -- save words by not naming the sites
 Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$:\Sexpr{sig.yr} days $UI_{90}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:\Sexpr{bs.sig.yr} days $UI_{90}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], Figure \ref{fig:vapar}) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. We did find evidence of local adaptation ($\sigma_{population}$:\Sexpr{bs.sig.pop} days, $UI_{90}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}b) and \Sexpr{yrVpop}X and \Sexp{spVpop}X smaller than the variation due to year and species (respectively). 
 
 % emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
-The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}, and with different implications for carbon gain \citep{Korner2023}.
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
 
 % Shortened for space
 \iffalse
@@ -293,7 +293,7 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
 Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}. Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
-Varying light availability over the early season combined with different plant strategies may alter this equation, and explain why some species leafout early during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
+Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially explaining why some species leafout during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
 
 % Shortened for space
 \iffalse
@@ -302,8 +302,10 @@ Varying light availability over the early season combined with different plant s
 Our results raise questions about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions \citep{AUGSPURGER2005}.
 \fi
 
-The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. Sampling across species of different leafout and growth strategies appears especially important as we found later-leafout species did not exhibit a strong trade-off. Whether this is consistent across other communities of species---and %some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
-other climates is an important question. Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
+The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always well studied in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding.  Sampling across species of different leafout and growth strategies appears especially important, alongside studies of how different communities and climates may shape the relationship between calendar and thermal growing seasons. 
+% Sampling across species of different leafout and growth strategies appears especially important, especially given that the earliest species showed the largest declines in thermal growing season with earlier leafout. Whether this finding is consistent across other communities of species---and other climates is an important question. 
+%some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
+Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
 
 % Our findings suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology.  
 
